<resources>
    <string name="app_name" translatable="false">PokerTimer</string>
    <string name="changeToken">Changing the token</string>
    <string name="color">Color</string>
    <string name="value">Value</string>
    <string name="back">Back</string>
    <string name="remove">Remove</string>
    <string name="apply">Apply</string>
    <string name="nbToken">Number of tokens</string>
    <string name="tokenCounter">Counter</string>
    <string name="levelChrono">Level :</string>
    <string name="chrono">Chronometer</string>
    <string name="smallBlindChrono">Small blind :</string>
    <string name="bigBlindChrono">Big blind :</string>
    <string name="nextLevel">Next level</string>
    <string name="startPause">Start / Pause</string>
    <string name="nbTokenPlayer">Number of tokens per player</string>
    <string name="totalNbToken">Total number of token :</string>
    <string name="totalValToken">Total value of token :</string>
    <string name="startGame">Start Game</string>
    <string name="levelsSettings">Levels settings</string>
    <string name="settingsBack">Settings</string>
    <string name="launch">Launch</string>
    <string name="nbPlayer">Number of player</string>
    <string name="tokens">Tokens</string>
    <string name="levels">Levels</string>
    <string name="nbLevelPauses">Number of levels between pauses</string>
    <string name="percentageTokensBank">Percentage of tokens in bank</string>
    <string name="earlySmallBlindValue">Early Small Blind Value</string>
    <string name="gameDuration">Game duration</string>
    <string name="levelDuration">Level duration</string>
    <string name="calculateAllLevel">Calculate all level ?</string>
    <string name="settingsTokens">Settings tokens</string>
    <string name="duration">Duration :</string>
    <string name="totalDuration">Total duration :</string>
    <string name="pause">Pause</string>
    <string name="tokenValue">Token value</string>
    <string name="total">Total</string>
    <string name="addOne" translatable="false">+ 1</string>
    <string name="addFive" translatable="false">+ 5</string>
    <string name="addTen" translatable="false">+ 10</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="handRanking">Hand Ranking</string>
    <string name="flushRoyal">Flush Royal</string>
    <string name="straightFlush">Straight Flush</string>
    <string name="fourOfKind">Four of a Kind</string>
    <string name="fullHouse">Full House</string>
    <string name="flush">Flush</string>
    <string name="straight">Straight</string>
    <string name="threeOfKind">Three Of a Kind</string>
    <string name="twoPair">Two Pair</string>
    <string name="pair">Pair</string>
    <string name="highCard">High Card</string>
    <string name="buttonCards">Cards Rank</string>
</resources>