<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/colorTokenView2"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="8dp"
            android:background="#F44336"
            app:layout_constraintBottom_toBottomOf="@+id/textView19"
            app:layout_constraintStart_toEndOf="@+id/textView19"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/colorToken2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Rouge"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toEndOf="@+id/colorTokenView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tokenCountVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/tokenValue"
            app:layout_constraintEnd_toStartOf="@+id/tokenCountVal"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

        <Button
            android:id="@+id/buttonAdd1"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:text="@string/addOne"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonAdd5"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:text="@string/addFive"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonAdd1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonAdd10"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:text="@string/addTen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonAdd5"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tokenCountNumber"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonResetToken"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:backgroundTint="#F44336"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8" />

</androidx.constraintlayout.widget.ConstraintLayout>